prevent horizontal scroll

--- a/src/app.css
+++ b/src/app.css
@@ -37,6 +37,7 @@
 
 html,
 body {
+  max-width: 100vw;
   overflow-x: hidden;
 }
 
